tests/Ninja/Parser/basic.ninja
# Check basic parsing functionality.
#
# RUN: %{llbuild} ninja parse %s 2> %t.err
# RUN: %{FileCheck} < %t.err %s

# CHECK: actOnBeginManifest("<main>")

# Check "default" parsing.
#
# CHECK: basic.ninja:[[@LINE+1]]:7: error: expected identifier token
default
# CHECK: actOnDefaultDecl(["a", "b", "c"])
default a b c
# CHECK: basic.ninja:[[@LINE+1]]:10: error: expected newline token
default a :

# Check "include" and "subninja" parsing.
#
# CHECK: actOnIncludeDecl(/*IsInclude=*/true, "t2.ninja") 
include t2.ninja
# CHECK: actOnIncludeDecl(/*IsInclude=*/false, "t3.ninja") 
subninja t3.ninja
# CHECK: basic.ninja:[[@LINE+1]]:17: error: expected newline token
include t4.ninja bad

# CHECK: actOnEndManifest()
